feat(home): add media screen in `HomePage.css` to run app  in mobile size screen

--- a/src/Home/HomePage.css
+++ b/src/Home/HomePage.css
@@ -2,3 +2,9 @@
     display: flex;
     margin: 10px;
 }
+
+@media screen and (max-width: 24rem){
+    .fruits-vegetables-row {
+        flex-direction: column;
+    }
+}
