--- a/src/Order/AllOrdersPage.css
+++ b/src/Order/AllOrdersPage.css
@@ -16,6 +16,15 @@
     border-collapse: collapse;
     border: 1px solid #ddd;
 }
+
+.order-table-header>th {
+    background-color: #303030;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 15px;
+    text-align: left;
+  
+}
 tr {
     color: black;
 }
@@ -23,8 +32,6 @@ tr {
 th {
     color: white;
     background-color: #303030;
-    /* border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd; */
     padding: 15px;
     text-align: left;
   
