--- a/src/Home/Card.css
+++ b/src/Home/Card.css
@@ -1,21 +1,46 @@
-.card {
+.product-card {
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    width: 250px;
-    height: 450px;
-    text-align: center;
-    margin: 10px;
+    box-shadow: 0 0.25rem 0.5rem 0 rgba(0,0,0,0.2);
+    width: 10rem;
+    height: 22rem;
+    margin: 0.7rem;
 }
 img {
     width: 100%;
     height: 40%;
   
 }
-.basket {
+
+.product-seller {
+    text-transform: uppercase;
+    color: gray;
+    font-size: 0.75rem;
+    padding: 0.7rem  0 0 0.5rem;
+}
+.product-name {
+    font-weight: 400;
+    font-size: 1rem;
+    padding: 0 0 0 0.5rem;
+}
+.product-quantity{
+    margin: 1rem 0 1rem 0 ;
+    font-size: 0.9rem;
+    padding: 0 0 0 0.5rem;
+    font-weight: 300;
+}
+
+.product-card-box {
+    display: flex;
     margin: auto;
+    flex-direction: column;
     justify-content: center;
-    text-align: center;
-    width: 80%;
-    height: 30%;
-    background-color: linen;
- }
+    width: 85%;
+    height: 28%;
+    background-color: 	#F5F5F5;
+}
+
+.product-price {
+    font-weight: 600;
+    font-size: 0.9rem;
+    padding: 0rem 0 1rem 0.5rem;
+}
