--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,11 +1,10 @@
 .header {
-    border: black solid 1px;
     display: flex;
     justify-content: space-between;
     background-color: black;
 }
 .header-tab {
-    padding: 5px;
+    padding: 0.3rem;
     color: blanchedalmond;
 }
 
