--- a/src/Basket/BasketPage.css
+++ b/src/Basket/BasketPage.css
@@ -1,6 +1,6 @@
 
 .cart {
-    margin: 20px;
+    margin: 1.25rem;
 }
 .cart-table-container {
     overflow-x:auto;
@@ -16,7 +16,7 @@
 
 }
 .cart-category>td {
-    padding: 15px;
+    padding: 1rem;
     text-align: left;
 }
 
@@ -24,7 +24,7 @@
     background-color: #303030;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
-    padding: 15px;
+    padding: 1rem;
     text-align: left;
   
 }
@@ -33,13 +33,13 @@
 .cart-container{
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
-    /* border: 1px solid black; */
     align-items: flex-end;
+    margin-top: 3rem;
+    
 }
 
 .cart-amount {
-    font-size: 30px;
+    font-size: 1.8rem;
     text-align: center;
 }
 
@@ -48,21 +48,18 @@
 }
 
 .cart-back-button {
-    padding: 15px;
+    padding: 1rem;
+    
 }
 
 .cart-checkout {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 0.25rem 0.5rem 0 rgba(0,0,0,0.2);
     display: flex;
-    /* align-items: center; */
     flex-direction: column;
     background-color: wheat;
-    margin-bottom: 50px;
-    width: 320px;
-    height: 200px;
+    width: 18rem;
+    height: 12rem;
     border: 1px solid #ddd;
-
-    
 
 }
 
@@ -74,7 +71,7 @@
    background-color: darkgoldenrod;
    align-self: flex-end;
    padding: 5%;
-   margin: 10px;
+   margin: 0.625rem;
  
 }
 
@@ -82,6 +79,10 @@
 @media screen and (max-width: 30rem){
     .cart-container {
         flex-direction: column-reverse;
+        align-items: center;
+    }
+    .cart-checkout{
+        margin-bottom: 1rem;
     }
 }
    
