--- a/src/Order/AllOrdersPage.scss
+++ b/src/Order/AllOrdersPage.scss
@@ -7,10 +7,7 @@
     padding-top: 1.8rem;
     padding-left: 1.8rem;
 }
-.order-table-container {
-    overflow-x:auto;
-}
-.order-table{
+.order-table {
     width: 50%;
     margin: auto;
     border-collapse: collapse;
@@ -25,11 +22,17 @@
     text-align: left;
   
 }
-.order-details>td {
-    padding:  1.25rem;
+.order-details>td{
+    padding: 1rem;
     text-align: left;
-    max-width: 1.5rem;
 }
+
+
+.order-item-container {
+    overflow-x:auto;
+    margin-bottom: 3rem;
+}
+
 .order-item-table{
     width: 50%;
     margin: auto;
@@ -48,6 +51,11 @@
     padding: 1rem;
     text-align: left;
     color: white;
+}
+.order-item-total>td {
+    padding: 1rem;
+    text-align: left;
+
 }
 
 
