feat(basket): add check for basket items in BasketPage.js  to disable checkout button

--- a/src/Basket/BasketPage.scss
+++ b/src/Basket/BasketPage.scss
@@ -75,6 +75,16 @@
    margin: 0.625rem;
  
 }
+.checkout-button-disable {
+
+    display: block;
+    float:right;
+    background-color: lightgray;
+    align-self: flex-end;
+    padding: 5%;
+    margin: 0.625rem;
+
+}
 
 
 
