feat(Home): add check for quantity count and display sold out if zero in Card.js  component

--- a/src/Home/Card.scss
+++ b/src/Home/Card.scss
@@ -44,3 +44,9 @@ img {
     font-size: 0.9rem;
     padding: 0rem 0 1rem 0.5rem;
 }
+
+.product-sold-out {
+    color: red;
+    text-align: center;
+    border: red 1px solid;
+}
