--- a/src/Form/CheckoutForm.scss
+++ b/src/Form/CheckoutForm.scss
@@ -1,6 +1,8 @@
 .checkout-form {
     border: 1px solid black;
     display: flex;
+    // width: 30%;
+    margin: auto;
     flex-direction: column;
     align-items: center;
 }
